--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "tabs",
-	"name": "tabs",
+	"id": "minitabs",
+	"name": "minitabs",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "迷你标签页",
